--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   # Network
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
-  connectivity_plus: ^3.0.2
+#  connectivity_plus: ^3.0.2
 
   # DI
   get_it: ^7.2.0
@@ -29,7 +29,6 @@ dependencies:
 
 
   #UI
-  smooth_page_indicator: ^1.0.0+2 #intro
   flutter_staggered_animations: ^1.1.1 # #animation
   auto_size_text: ^3.0.0
   easy_localization: ^3.0.1 # localization
@@ -37,34 +36,12 @@ dependencies:
   flutter_svg: ^1.1.6 #svg images
   cached_network_image: ^3.2.2
   flutter_spinkit: ^5.1.0 #loading
-  pin_code_fields: ^7.4.0
-  webview_flutter: ^3.0.4
   country_code_picker: ^2.0.2
-  flutter_timer_countdown: ^1.0.5
-  carousel_slider: ^4.2.1
-  flutter_rating_bar: ^4.0.1
-  dotted_border: ^2.0.0+3
-  measure_size: ^4.0.0
   url_launcher: ^6.1.11
-  map_launcher: ^3.0.1
-  flutter_widget_from_html_core: ^0.9.0+1
-  google_places_flutter: 2.0.5
-  country_codes: ^2.2.0
-  lottie: ^2.3.2
-  #login
-  #  flutter_facebook_auth: ^6.0.3
-  apple_sign_in_safety: ^0.0.6
-  google_sign_in: ^5.2.3
-  flutter_facebook_auth: ^4.4.1+1
+
   #files
   file_picker: ^5.2.2
   image_picker: ^0.8.4+5
-  photo_view: ^0.13.0
-
-  #maps
-  geocoding: ^2.0.5
-  geolocator: ^9.0.2
-  google_maps_flutter: ^2.2.1
 
   # State management
   permission_handler: ^10.2.0
@@ -75,11 +52,7 @@ dependencies:
   logger: ^1.1.0
   logging: ^1.1.0
 
-  #firebase
-  firebase_core: ^2.3.0
-  firebase_messaging: ^14.1.1
-  firebase_crashlytics: ^3.0.2
-  firebase_auth: ^4.2.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -102,16 +75,11 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 
 flutter:
-
-
   uses-material-design: true
-
   assets:
     - assets/translations/
-    - assets/map_styles/
     - assets/images/
     - assets/images/gif/
-    - assets/images/flags/
     - assets/images/svg/
     - assets/images/svg/no_data/
     - assets/images/svg/intro/
