--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   # Network
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
-#  connectivity_plus: ^3.0.2
 
   # DI
   get_it: ^7.2.0
@@ -38,7 +37,7 @@ dependencies:
   flutter_spinkit: ^5.1.0 #loading
   country_code_picker: ^2.0.2
   url_launcher: ^6.1.11
-
+  number_paginator: ^0.4.0
   #files
   file_picker: ^5.2.2
   image_picker: ^0.8.4+5
@@ -51,7 +50,6 @@ dependencies:
   #log
   logger: ^1.1.0
   logging: ^1.1.0
-
 
 
   # The following adds the Cupertino Icons font to your application.
